# bt_api_foxbit

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/bt_api_foxbit/: __init__.py  plugin.py  registry_registration.py
src/bt_api_foxbit/containers/: __init__.py
src/bt_api_foxbit/containers/tickers/: __init__.py  foxbit_ticker.py
src/bt_api_foxbit/errors/: __init__.py
src/bt_api_foxbit/exchange_data/: __init__.py
src/bt_api_foxbit/feeds/live_foxbit/: request_base.py  spot.py
tests/containers/exchanges/: test_foxbit_exchange_data.py
tests/containers/tickers/: test_foxbit_ticker.py
tests/exchange_registers/: test_register_foxbit.py
tests/feeds/: test_foxbit_request_data.py
